--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-macros = { path = "./macros" }
+macros = { path = "./macros", optional = true }
+
+[features]
+sumtype = ["macros/sumtype"]
+kinded = ["macros/kinded"]
+default = ["sumtype", "kinded"]
+
+[dev-dependencies]
+typesum = { path = ".", features = ["sumtype", "kinded"] }
