--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -6,11 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-convert_case = "0.6.0"
 proc-macro2 = "1.0.66"
 quote = "1.0.32"
-syn = { version = "2.0.27", features = ["extra-traits"] }
-thiserror = "1.0.44"
+syn = { version = "2.0.27" }
+convert_case = {version = "0.6.0", optional = true }
 
 [lib]
 proc-macro = true
+
+[features]
+sumtype = ["syn/extra-traits", "convert_case"]
+kinded = []
+default = ["kinded", "sumtype"]
