chore: update cargo

--- a/typesum-macros/Cargo.toml
+++ b/typesum-macros/Cargo.toml
@@ -2,6 +2,10 @@
 name = "typesum-macros"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "Macros for typesum"
+repository = "https://github.com/0x00002a/typesum"
+authors = ["Natasha England-Elbro <natasha@natashaee.me>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
