--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ readme = "docs/README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-typesum-macros = { version = "0.1.0", default_features = false }
+impl-tools = "0.9.0"
+typesum-macros = { path = "./typesum-macros", default_features = false }
 
 [features]
 sumtype = ["typesum-macros/sumtype"]
