--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ readme = "docs/README.md"
 
 [dependencies]
 impl-tools = "0.9.0"
-typesum-macros = { path = "./typesum-macros", default_features = false }
+typesum-macros = { version= "0.2.0", default_features = false }
 
 [features]
 sumtype = ["typesum-macros/sumtype"]
